Quick fix to keep sidebar usable on small screens

--- a/src/sa_web/static/css/leaflet-sidebar.css
+++ b/src/sa_web/static/css/leaflet-sidebar.css
@@ -1,30 +1,21 @@
 .sidebar {
   position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 100%;
+  top: 142px;
+  bottom: 265px;
+  width: 90%;
   overflow: hidden;
+  border-radius: 4px;
   z-index: 2000; }
   .sidebar.collapsed {
     width: 33px; }
-  @media (min-width: 768px) {
+  @media (min-width: 960px) {
     .sidebar {
+      width: 300px;
       top: 194px;
-      bottom: 75px;
-      left: 11px;
-      transition: width 500ms; } }
-  @media (min-width: 768px) and (max-width: 991px) {
-    .sidebar {
-      width: 300px; } }
-  @media (min-width: 992px) and (max-width: 1199px) {
-    .sidebar {
-      width: 300px; } }
-  @media (min-width: 1200px) {
-    .sidebar {
-      width: 300px; } }
+      bottom: 75px; } }
 
 .sidebar-left {
-  left: 0; }
+  left: 11px; }
   @media (min-width: 768px) {
     .sidebar-left {
       left: 10px; } }
